--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,21 @@
     scroll-behavior: smooth;
     user-select: none;
 }
+
+.animate{
+    transform: perspective(800px) rotateY(25deg) scale(.8) rotateX(10deg); 
+    transition: all .6s ease;
+}
+
+.animate:hover{
+    transform: perspective(800px) rotateY(-15deg) translateY(-50px) scale(.9) rotateX(10deg);
+}
+
+.animate-reverse{
+    transform: perspective(800px) rotateY(-25deg) scale(.8) rotateX(10deg);
+    transition: all .6s ease;
+}
+
+.animate-reverse:hover{
+    transform: perspective(800px) rotateY(15deg) translateY(50px) scale(.9) rotateX(10deg);
+}
